popupContent.css
.collapsible {
    background-color: #777;
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 300px;
    border: none;
    text-align: left;
    outline: none;
    font-size: 13px;
}

.collapsible:after {
    content: '\002B';
    color: white;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.content {
    padding: 0 18px;
    max-height: 0;
    height: 300px;
    width: 264px;
    overflow: auto;
    transition: max-height 0.2s ease-out;
    background-color: #f1f1f1;
}

